--- a/app/components/Main/Main.scss
+++ b/app/components/Main/Main.scss
@@ -1,3 +1,11 @@
 .green {
-    color: red;
+    color: lime;
+}
+
+.bigBtn {
+    padding: 10px;
+    border: 2px solid black;
+    display: inline-block;
+    cursor: pointer;
+    border-radius: 15px;
 }
